Changing API to use Ref instead of Name
